[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram Bot for Students Achievements"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^20.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
